# Healthy-Cappybara

./: README.md  acupuncture-directory.json  pyproject.toml
HealthyCappybara/: app.py
HealthyCappybara/analysis/: Prediction_Model.py  Surveys_Clean.py  data_clean_census_cost(1).py  data_clean_census_cost.py  dmba.py  health_missing_process.py  model_build_score.py
HealthyCappybara/cleaned_data/: US_Zip  demand.csv  health_score.csv
HealthyCappybara/dash_folder/: main_dash.py  radar.py
HealthyCappybara/dash_folder/assets/: scroll_bar.css
HealthyCappybara/dashboard/assets/: scroll_bar.css
HealthyCappybara/scraping/: README.md  clean.py  scraping_script.py
scraping_data/: healthgrades_scrap.py
