[tool.poetry]
name = "healthy-capybara"
version = "3.12"
description = ""
authors = ["Yue Jian <jiany@uchicago.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
dash = "^2.16.0"
numpy = "^1.24.2"
pathlib = "^1.0.1"
sklearn = "^0.0.post12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
