[tool.poetry]
name = "healthy-capybara"
version = "3.12"
description = ""
authors = ["Yue Jian <jiany@uchicago.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.2.1"
geojson = "^3.1.0"
plotly = "^5.19.0"
lxml = "^5.1.0"
bs4 = "^0.0.2"
selenium = "^4.18.1"
webdriver-manager = "^4.0.1"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
dash = "^2.16.0"
numpy = "^1.24.2"
pathlib = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
